Task[PCOMP432-T-2-CD2]: Prep

--- a/[COMP432]_Prostate_Cancer.ipynb
+++ b/[COMP432]_Prostate_Cancer.ipynb
@@ -18,15 +18,61 @@
     "import seaborn as sns\n",
     "import PIL\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "label_names = [\"Gland\", \"Non-Gland\", \"Tumor\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def train_test_split(dataset, test_ratio=0.2):\n",
+    "    indices = np.arange(len(dataset))\n",
+    "    np.random.shuffle(indices)\n",
+    "    split = int(len(dataset) * (1 - test_ratio))\n",
+    "    train_indices, test_indices = indices[:split], indices[split:]\n",
+    "    \n",
+    "    return torch.utils.data.Subset(dataset, train_indices), torch.utils.data.Subset(dataset, test_indices)\n",
+    "\n",
+    "\n",
+    "def extract_features(loader, model):\n",
+    "    features, labels = [], []\n",
+    "    with torch.no_grad():\n",
+    "        for images, lbls in loader:\n",
+    "            feats = model(images).squeeze(-1).squeeze(-1).numpy()  # Flatten features\n",
+    "            features.append(feats)\n",
+    "            labels.append(lbls.numpy())\n",
+    "    \n",
+    "    return np.concatenate(features), np.concatenate(labels)\n",
+    "\n",
+    "\n",
+    "def create_embedding_dataframe(_full_train_feature_map_set, _full_train_label_set):\n",
+    "    reduction_fitter = TSNE(random_state=42)\n",
+    "    embeddings = reduction_fitter.fit_transform(_full_train_feature_map_set)\n",
+    "    embedding_dataframe = pd.DataFrame(embeddings, columns=[\"x_embedded\", \"y_embedded\"])\n",
+    "    embedding_dataframe[\"label\"] = _full_train_label_set\n",
+    "    return embedding_dataframe\n",
+    "\n",
+    "def plot_tsne_embedding(_embedding_dataframe):\n",
+    "    colors = [\"red\", \"green\", \"blue\"]\n",
+    "\n",
+    "    plt.style.use('seaborn-v0_8-dark')\n",
+    "    fig, ax = plt.subplots(figsize=(16, 10))\n",
+    "    for i in _embedding_dataframe[\"label\"].unique():\n",
+    "        label_embedding_values = _embedding_dataframe[_embedding_dataframe.label == i]\n",
+    "        ax.scatter(label_embedding_values.x_embedded, label_embedding_values.y_embedded, \n",
+    "                   label=label_names[i], c=colors[i], alpha=0.5)\n",
+    "\n",
+    "    ax.set_xlabel(\"Embedded Feature 1\")\n",
+    "    ax.set_ylabel(\"Embedded Feature 2\")\n",
+    "    ax.set_title(\"Feature Extractor Mappings Following TSNE Reduction\")\n",
+    "    ax.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
     "class ProstateCancerDataset(Dataset):\n",
     "    def __init__(self, root_dir, transform):\n",
     "        self.root_dir = root_dir\n",
@@ -48,12 +94,13 @@
     "    def __getitem__(self, idx):\n",
     "        image = PIL.Image.open(self.image_paths[idx]).convert(\"RGB\")\n",
     "        label = self.labels[idx]\n",
-    "        return self.transform(image), label"
+    "        return self.transform(image), label\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +111,89 @@
     "    transforms.RandomHorizontalFlip(), \n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-    "])"
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_dataset = ProstateCancerDataset(dataset_path, transform)\n",
+    "train_dataset, test_dataset = train_test_split(full_dataset)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Colorectal Cancer Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize Pre-trained ResNet**\n",
+    "resnet = models.resnet50(weights=None, num_classes=3)\n",
+    "resnet.load_state_dict(torch.load(\"Models/ResNet_Rmsprop_Corolectal_Cancer_pre_trained.tar\"))\n",
+    "resnet = torch.nn.Sequential(*(list(resnet.children())[:-1]))  # Remove the final classification layer\n",
+    "resnet.eval()  \n",
+    "\n",
+    "train_features, train_labels = extract_features(train_loader, resnet)\n",
+    "test_features, test_labels = extract_features(test_loader, resnet)\n",
+    "\n",
+    "classifier = LogisticRegression()\n",
+    "classifier.fit(train_features, train_labels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = classifier.predict(test_features)\n",
+    "\n",
+    "cm = confusion_matrix(test_labels, predictions)\n",
+    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=[\"Gland\", \"Non-Gland\", \"Tumor\"], yticklabels=label_names)\n",
+    "plt.title(\"Confusion Matrix\")\n",
+    "plt.xlabel(\"Predicted Label\")\n",
+    "plt.ylabel(\"True Label\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(test_labels, predictions, target_names=label_names))\n",
+    "\n",
+    "embedding_df = create_embedding_dataframe(train_features, train_labels)\n",
+    "plot_tsne_embedding(embedding_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ImageNet Model"
    ]
   },
   {
@@ -491,32 +620,10 @@
     }
    ],
    "source": [
-    "def train_test_split(dataset, test_ratio=0.2):\n",
-    "    indices = np.arange(len(dataset))\n",
-    "    np.random.shuffle(indices)\n",
-    "    split = int(len(dataset) * (1 - test_ratio))\n",
-    "    train_indices, test_indices = indices[:split], indices[split:]\n",
-    "    return torch.utils.data.Subset(dataset, train_indices), torch.utils.data.Subset(dataset, test_indices)\n",
-    "\n",
-    "full_dataset = ProstateCancerDataset(dataset_path, transform)\n",
-    "train_dataset, test_dataset = train_test_split(full_dataset)\n",
-    "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
-    "\n",
     "# Initialize Pre-trained ResNet**\n",
     "resnet = models.resnet50(weights=models.ResNet50_Weights.IMAGENET1K_V1)\n",
     "resnet = torch.nn.Sequential(*(list(resnet.children())[:-1]))  # Remove the final classification layer\n",
     "resnet.eval()  \n",
-    "\n",
-    "def extract_features(loader, model):\n",
-    "    features, labels = [], []\n",
-    "    with torch.no_grad():\n",
-    "        for images, lbls in loader:\n",
-    "            feats = model(images).squeeze(-1).squeeze(-1).numpy()  # Flatten features\n",
-    "            features.append(feats)\n",
-    "            labels.append(lbls.numpy())\n",
-    "    return np.concatenate(features), np.concatenate(labels)\n",
     "\n",
     "train_features, train_labels = extract_features(train_loader, resnet)\n",
     "test_features, test_labels = extract_features(test_loader, resnet)\n",
@@ -572,38 +679,14 @@
     "predictions = classifier.predict(test_features)\n",
     "\n",
     "cm = confusion_matrix(test_labels, predictions)\n",
-    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=[\"Gland\", \"Non-Gland\", \"Tumor\"], yticklabels=[\"Gland\", \"Non-Gland\", \"Tumor\"])\n",
+    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=[\"Gland\", \"Non-Gland\", \"Tumor\"], yticklabels=label_names)\n",
     "plt.title(\"Confusion Matrix\")\n",
     "plt.xlabel(\"Predicted Label\")\n",
     "plt.ylabel(\"True Label\")\n",
     "plt.show()\n",
     "\n",
     "print(\"Classification Report:\")\n",
-    "print(classification_report(test_labels, predictions, target_names=[\"Gland\", \"Non-Gland\", \"Tumor\"]))\n",
-    "\n",
-    "def create_embedding_dataframe(_full_train_feature_map_set, _full_train_label_set):\n",
-    "    reduction_fitter = TSNE(random_state=42)\n",
-    "    embeddings = reduction_fitter.fit_transform(_full_train_feature_map_set)\n",
-    "    embedding_dataframe = pd.DataFrame(embeddings, columns=[\"x_embedded\", \"y_embedded\"])\n",
-    "    embedding_dataframe[\"label\"] = _full_train_label_set\n",
-    "    return embedding_dataframe\n",
-    "\n",
-    "def plot_tsne_embedding(_embedding_dataframe):\n",
-    "    colors = [\"red\", \"green\", \"blue\"]\n",
-    "    label_names = [\"Gland\", \"Non-Gland\", \"Tumor\"]\n",
-    "\n",
-    "    plt.style.use('seaborn-v0_8-dark')\n",
-    "    fig, ax = plt.subplots(figsize=(16, 10))\n",
-    "    for i in _embedding_dataframe[\"label\"].unique():\n",
-    "        label_embedding_values = _embedding_dataframe[_embedding_dataframe.label == i]\n",
-    "        ax.scatter(label_embedding_values.x_embedded, label_embedding_values.y_embedded, \n",
-    "                   label=label_names[i], c=colors[i], alpha=0.5)\n",
-    "\n",
-    "    ax.set_xlabel(\"Embedded Feature 1\")\n",
-    "    ax.set_ylabel(\"Embedded Feature 2\")\n",
-    "    ax.set_title(\"Feature Extractor Mappings Following TSNE Reduction\")\n",
-    "    ax.legend()\n",
-    "    plt.show()\n",
+    "print(classification_report(test_labels, predictions, target_names=label_names))\n",
     "\n",
     "embedding_df = create_embedding_dataframe(train_features, train_labels)\n",
     "plot_tsne_embedding(embedding_df)"
@@ -635,7 +718,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
