Task[PCOMP432-T-2-CD2]: Add discussdion

--- a/[COMP432]_Prostate_Cancer.ipynb
+++ b/[COMP432]_Prostate_Cancer.ipynb
@@ -651,14 +651,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Discussion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- G"
+    "- Discussion\n",
+    "    - Colorectal Cancer ResNet model predicts at a accuracy of +89% across all types of prostate cancer.\n",
+    "    - Feature extraction seems to be of reasonable quality as the classes are well seperated which helped the Logistic Regression Model to predict fairly well. This may be due to the data of the model that was trained on being similar to the Prostate Cancer images. \n"
    ]
   },
   {
